--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "build": "snowpack build && npm run copy"
   },
   "dependencies": {
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "tailwindcss": "^2.0.2"
