--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,29 @@
 {
-    "compilerOptions": {
-        "outDir": "./dist/",
-        "sourceMap": true,
-        "strict": true,
-        "noImplicitReturns": true,
-        "noImplicitAny": true,
-        "module": "es6",
-        "moduleResolution": "node",
-        "target": "es5",
-        "allowJs": true,
-        "jsx": "react",
-    },
     "include": [
-        "./src/**/*"
-    ]
+        "src",
+        "types"
+    ],
+    "compilerOptions": {
+        "module": "esnext",
+        "target": "esnext",
+        "moduleResolution": "node",
+        "jsx": "preserve",
+        "baseUrl": "./",
+        /* paths - import rewriting/resolving */
+        "paths": {
+            // If you configured any Snowpack aliases, add them here.
+            // Add this line to get types for streaming imports (packageOptions.source="remote"):
+            //     "*": [".snowpack/types/*"]
+            // More info: https://www.snowpack.dev/guides/streaming-imports
+        },
+        /* noEmit - Snowpack builds (emits) files, not tsc. */
+        "noEmit": true,
+        /* Additional Options */
+        "strict": true,
+        "skipLibCheck": true,
+        "forceConsistentCasingInFileNames": true,
+        "resolveJsonModule": true,
+        "allowSyntheticDefaultImports": true,
+        "importsNotUsedAsValues": "error"
+    }
 }
